# compiler

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: diagnostics.rs  git_repo.rs  main.rs  pack_repo.rs  render.rs  xml_parser.rs
tests/: exit_codes.rs  no_cache_pollution.rs
