[package]
name = "legalize-kr-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20"
quick-xml = "0.38"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
tempfile = "3.18"
time = "0.3"

[profile.profiling]
inherits = "release"
debug = 1
strip = "none"
